--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -12,7 +12,7 @@
             <button (click)="getBilling()" id="bill-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
                 {{ 'PROFILE._bill' | translate }}
             </button>
-            <button (click)="getOrders(0)" id="order-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
+            <button (click)="goToOrders()" id="order-button" class="block w-full px-4 py-2 border-b border-gray-200 cursor-pointer hover:bg-gray-100 hover:text-blue-700 dark:border-gray-600 dark:hover:bg-gray-600 dark:hover:text-white dark:focus:ring-gray-500 dark:focus:text-white">
                 {{ 'PROFILE._orders' | translate }}
             </button>
         </div>
@@ -108,65 +108,90 @@
                 </div>
             }
             @if(show_orders){
-                <div class="place-items-center">
-                  @for (order of orders; track order.id; let idx = $index) {
-                      <div class="w-full h-fit bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border mb-4">
+                <div class="w-full h-fit bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border">
+                    <h5 class="md:text-3xl lg:text-4xl m-4 font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{ 'PROFILE._order_list' | translate }}:</h5>
+                    <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
+                        <div class="m-4 relative overflow-x-auto shadow-md sm:rounded-lg">
+                            <table class="w-full text-sm text-left rtl:text-right text-gray-500 rounded-lg">
+                                <thead class="text-xs text-gray-700 uppercase  bg-gray-100 ">
+                                    <tr>
+                                        <th scope="col" class="px-6 py-3 text-center align-middle">
+                                            {{ 'PRODUCT_INVENTORY._order_id' | translate }}
+                                        </th>
+                                        <th scope="col" class="px-6 py-3 text-center align-middle">
+                                            {{ 'PRODUCT_INVENTORY._state' | translate }}
+                                        </th>
+                                        <th scope="col" class="px-6 py-3 text-center align-middle">
+                                            {{ 'PRODUCT_INVENTORY._priority' | translate }}
+                                        </th>
+                                        <th scope="col" class="px-6 py-3 text-center align-middle">
+                                            Date
+                                        </th>
+                                        <th scope="col" class="text-center align-middle">
+                                           Actions 
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @for (order of orders; track order.id; let idx = $index) {
+                                        <tr class="border-b bg-white hover:bg-gray-200">
+                                            <td class="px-6 py-4 text-center align-middle">
+                                                {{order.id}}
+                                            </td>
+                                            <td class="px-6 py-4 text-center align-middle">                                                
+                                                @if(order.state == 'inProgress'){
+                                                    <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{order.state}}</span>
+                                                } @else if(order.state ==  'completed') {
+                                                    <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{order.state}}</span>
+                                                } @else if(order.state == 'failed') {
+                                                    <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{order.state}}</span>
+                                                } @else if(order.state == 'pending') {
+                                                    <span class="bg-blue-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{order.state}}</span>
+                                                }
+                                            </td>
+                                            <td class="px-6 py-4 text-center align-middle">
+                                                {{order.priority}}
+                                            </td>
+                                            <td class="px-6 py-4 text-center align-middle">
+                                                {{order?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}
+                                            </td>
+                                            <td class="px-6 py-4 text-center align-middle">
+                                                <button type="button" class="text-white bg-primary-100 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                                                    <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 14">
+                                                        <g stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                                                          <path d="M10 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+                                                          <path d="M10 13c4.97 0 9-2.686 9-6s-4.03-6-9-6-9 2.686-9 6 4.03 6 9 6Z"/>
+                                                        </g>
+                                                      </svg>
+                                                </button>
+                                            </td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
 
-                          <div class="p-4 overflow-hidden border-b border-b-primary-100 border-b-2 shadow-lg rounded-t-lg">
-                            <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{order?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}</h5>
-                            <ul class="w-full space-y-1 list-disc list-inside dark:text-gray-600">
-                              <li><span class="font-bold">{{ 'PRODUCT_INVENTORY._order_id' | translate }}: </span> {{order.id}}</li>
-                              <li><span class="font-bold">{{ 'PRODUCT_INVENTORY._state' | translate }}: </span> {{order.state}}</li>
-                              <li><span class="font-bold">{{ 'PRODUCT_INVENTORY._priority' | translate }}: </span> {{order.priority}}</li>
-                            </ul>
-                          </div>
-
-                          <div class="bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
-                            <div class="px-5 py-5 bg-secondary-50/95 rounded-lg">
-                              @for(item of order.productOrderItem; track item.id){
-                                <div class="grid grid-cols-20/80 mb-4 bg-secondary-50 border border-primary-100 border-2 rounded-lg shadow-xl">
-                                  <div class="flex relative h-min-full w-min-full justify-center items-center rounded-lg">
-                                    <!-- Imagen de fondo difuminada -->
-                                    <div class="absolute inset-0 bg-cover bg-center opacity-75" style="background-image: url({{getProductImage(item)}});filter: blur(20px);"></div>
-                                    <!-- Imagen superior -->
-                                    <img [id]="'img-'+idx" class="h-5/6 w-5/6 object-contain z-10" src="{{getProductImage(item)}}" alt="Descripción de la imagen">
-                                  </div>
-                                  <div class="flex flex-col justify-start p-4 leading-normal dark:text-gray-600">
-                                      <h5 class="text-xl font-semibold tracking-tight text-primary-100 dark:text-primary-100">{{item?.name}}</h5>
-                                      <span class="font-bold">{{ 'PRODUCT_INVENTORY._desc' | translate }}: </span>
-                                      <markdown class="min-h-19 h-19 line-clamp-2" [data]="item.description"></markdown>
-                                      <span class="font-bold">{{ 'PRODUCT_INVENTORY._price' | translate }}: </span>
-                                      <span class="min-h-19 h-19 line-clamp-2">{{item.productOfferingPrice.price}} {{item.productOfferingPrice.unit}} {{item.productOfferingPrice.text}}</span>
-                                  </div>
-                                </div>
-                              }
-                            </div>
-                          </div>
-                      </div>
-                  } @empty {
-                    <div class="min-h-19 dark:text-gray-600 text-center">{{ 'PRODUCT_INVENTORY._not_found' | translate }}.</div>
-                  }
-                  @if (!loading_more) {
-                    @if (page_check) {
-                      <div class="flex pb-12 justify-center align-middle">
-                        <button (click)="next()" class="flex cursor-pointer items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
-                          Load more
-                          <svg class="w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
-                          </svg>
-                        </button>
-                      </div>
+                    @if (!loading_more) {
+                        @if (page_check) {
+                        <div class="flex pb-12 justify-center align-middle">
+                            <button (click)="next()" class="flex cursor-pointer items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700">
+                            Load more
+                            <svg class="w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
+                            </svg>
+                            </button>
+                        </div>
+                        }
+                    } @else {
+                        <div role="status" class="w-full h-full flex justify-center align-middle">
+                        <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+                            <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+                        </svg>
+                        <span class="sr-only">Loading...</span>
+                        </div>
                     }
-                  } @else {
-                    <div role="status" class="w-full h-full flex justify-center align-middle">
-                      <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
-                          <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
-                      </svg>
-                      <span class="sr-only">Loading...</span>
-                    </div>
-                  }
-              </div>
+                </div>
               }
               @if(show_billing){
                 <div class="w-full h-fit bg-secondary-50 rounded-lg dark:border-gray-700 border-secondary-50 border">
@@ -174,7 +199,7 @@
                     <hr class="h-px mr-4 ml-4 bg-primary-100 border-0">
                     <div class="m-4 relative overflow-x-auto shadow-md sm:rounded-lg">
                         <table class="w-full text-sm text-left rtl:text-right text-gray-500">
-                            <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
+                            <thead class="text-xs text-gray-700 uppercase bg-gray-100 ">
                                 <tr>
                                     <th scope="col" class="px-6 py-3">
                                         {{ 'BILLING._title' | translate }}
