--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.css
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.css
@@ -7,3 +7,7 @@
     border-radius: 5px;
     /* Additional styles for the floating div */
   }
+
+  .disabled {
+    cursor: not-allowed; /* Change the cursor when the div is disabled */
+  }
