--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -545,52 +545,56 @@
             @if(showCategory){
                 <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'CREATE_OFFER._category' | translate }}</h2>
                 <div class="m-4">
-                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">                        
-                        <table class="w-full text-sm text-left rtl:text-right text-gray-500">
-                            <thead class="text-xs text-gray-700 uppercase bg-gray-100">
-                                <tr>
-                                    <th scope="col" class="px-6 py-3">
-                                        {{ 'CREATE_OFFER._name' | translate }}
-                                    </th>
-                                    <th scope="col" class="px-6 py-3">
-                                        {{ 'CREATE_OFFER._last_update' | translate }}
-                                    </th>
-                                    <th scope="col" class="px-6 py-3">
-                                        {{ 'CREATE_OFFER._select' | translate }}
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @for (cat of categories; track cat.id;let idx = $index) {
-                                    <tr class="border-b hover:bg-gray-200">
-                                        <td class="px-6 py-4">
-                                            <b>{{cat.name}}</b>
-                                        </td>
-                                        <td class="px-6 py-4">
-                                            {{cat.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
-                                        </td>
-                                        <td class="px-6 py-4">
-                                            <input id="select-checkbox" [checked]="isCategorySelected(cat)" type="checkbox" value="" (click)="addCategory(cat)" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                        </td>
+                    <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full bg-white m-4">
+                        @if(loadingCategory){
+                            <div role="status" class="w-full h-fit flex justify-center align-middle">
+                                <svg aria-hidden="true" class="w-12 h-12 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600" viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z" fill="currentColor"/>
+                                    <path d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill"/>
+                                </svg>
+                                <span class="sr-only">Loading...</span>
+                            </div>
+                        } @else {                    
+                            <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+                                <thead class="text-xs text-gray-700 uppercase bg-gray-100">
+                                    <tr class="flex w-full justify-between">
+                                        <th scope="col" class="flex px-6 py-3 w-3/5">
+                                            {{ 'CREATE_OFFER._name' | translate }}
+                                        </th>
+                                        <th scope="col" class="flex px-6 py-3 w-fit">
+                                            {{ 'CREATE_OFFER._last_update' | translate }}
+                                        </th>
+                                        <th scope="col" class="flex px-6 py-3 w-fit">
+                                            {{ 'CREATE_OFFER._select' | translate }}
+                                        </th>
                                     </tr>
-                                    @if(cat.children.length>0){
-                                        @for(child of cat.children; track child){
-                                            <tr class="border-b hover:bg-gray-200">
-                                                <td class="px-6 py-4">
-                                                    {{cat.name}} / <b>{{child.name}}</b>
-                                                </td>
-                                                <td class="px-6 py-4">
-                                                    {{child.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
-                                                </td> 
-                                                <td class="px-6 py-4">
-                                                    <input id="select-checkbox" [checked]="isCategorySelected(child)" type="checkbox" value="" (click)="addCategory(child)" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                                                </td>                                          
-                                            </tr>
+                                </thead>
+                                <tbody>
+                                    @for (cat of categories; track cat.id;let idx = $index) {
+                                        <tr class="flex border-b hover:bg-gray-200 w-full justify-between">
+                                            <td class="flex px-6 py-4 w-3/5">
+                                                <b>{{cat.name}}</b>
+                                            </td>
+                                            <td class="flex px-6 py-4 w-fit">
+                                                {{cat.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
+                                            </td>
+                                            <td class="flex px-6 py-4 w-fit justify-end">
+                                                <input id="select-checkbox" [checked]="isCategorySelected(cat)" type="checkbox" value="" (click)="addCategory(cat)" class="flex w-4 h-4 justify-end text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                            </td>
+                                        </tr>
+                                        @if(cat.children.length>0){
+                                            @for(child of cat.children; track child){
+                                                <tr>
+                                                    <td colspan=3>
+                                                    <categories-recursion class="w-full" [child]="child" [parent]="cat" [selected]="selectedCategories" [path]="cat.name"></categories-recursion>
+                                                    </td>
+                                                </tr>
+                                            }
                                         }
                                     }
-                                }
-                            </tbody>
-                        </table>
+                                </tbody>
+                            </table>
+                        }
                         </div>
                         <div class="flex w-full justify-items-end justify-end ml-4">
                             <button type="button" (click)="toggleLicense();categoriesDone=true;"  class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
