--- a/src/app/shared/categories-filter/categories-filter.component.html
+++ b/src/app/shared/categories-filter/categories-filter.component.html
@@ -5,15 +5,23 @@
     <h2 [id]="'accordion-heading-'+idx">
       @if (category.children) {
         @if (category.children.length != 0) {
-          <button type="button" [ngClass]="$first ? classListFirst : $last ? classListLast : classList" [attr.data-accordion-target]="'#accordion-body-'+idx" aria-expanded="false" [attr.aria-controls]="'accordion-body-'+idx">
-            <span class="text-left">{{ category?.name }}</span>
-            <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
-            </svg>
-          </button>
+          <div [ngClass]="$first ? classListFirst : $last ? classListLast : classList">
+            <span class="text-left justify-start">{{ category?.name }}</span>
+            <div class="justify-end inline-flex">
+              <div class="justify-end" (click)="onClick(category)">
+                <input [checked]="isCheckedCategory(category)" type="checkbox" value="" class="hidden peer">
+                <fa-icon [icon]="isCheckedCategory(category) ? faCircleCheck : faCircle" class="text-2xl"></fa-icon>
+              </div>
+              <button type="button" class="ml-4" [attr.data-accordion-target]="'#accordion-body-'+idx" aria-expanded="false" [attr.aria-controls]="'accordion-body-'+idx">              
+                <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+                </svg>
+              </button>
+            </div>
+          </div>
+        } @else {
+          <bae-category-item [data]="category" [isParent]="true" [isFirst]="$first" [isLast]="$last"></bae-category-item>
         }
-      } @else {
-        <bae-category-item [data]="category" [isParent]="true" [isFirst]="$first" [isLast]="$last"></bae-category-item>
       }
     </h2>
   @if (category.children) {
@@ -35,3 +43,4 @@
 
 }
 </div>
+
