--- a/src/app/shared/category-item/category-item.component.html
+++ b/src/app/shared/category-item/category-item.component.html
@@ -1,7 +1,45 @@
-<input [(ngModel)]="checked" type="checkbox" [id]="option" value="" class="hidden peer" #optioninput>
-<label [for]="option" [ngClass]="labelClass" (click)="onClick(optioninput.checked)">
-  <div class="flex w-full justify-between items-center">
-    <div class="w-full text-base text-left font-semibold">{{ data?.name }}</div>
-    <fa-icon [icon]="checked ? faCircleCheck : faCircle" class="mr-2 text-2xl"></fa-icon>
-  </div>
-</label>
+@if (data?.children) {
+  @if (data?.children?.length == 0) {
+    <input [(ngModel)]="checked" type="checkbox" [id]="option" value="" class="hidden peer" #optioninput>
+    <label [for]="option" [ngClass]="labelClass" (click)="onClick(optioninput.checked)">
+      <div class="flex w-full justify-between items-center">
+        <div class="w-full text-base text-left font-semibold">{{ data?.name }}</div>
+        <fa-icon [icon]="checked ? faCircleCheck : faCircle" class="mr-2 text-2xl"></fa-icon>
+      </div>
+    </label>
+  } @else {
+    @if(data){
+      <h2 [id]="'accordion-heading-'+simplifiedId">
+        <div [ngClass]="classList">
+          <span class="text-left justify-start">{{ data.name }}</span>
+          <div class="justify-end inline-flex">
+            <div class="justify-end" (click)="onClickCategory(data)">
+              <input [checked]="isCheckedCategory(data)" type="checkbox" value="" class="hidden peer">
+              <fa-icon [icon]="isCheckedCategory(data) ? faCircleCheck : faCircle" class="text-2xl"></fa-icon>
+            </div>
+            <button type="button" class="ml-4" [attr.data-accordion-target]="'#accordion-body-'+simplifiedId" aria-expanded="false" [attr.aria-controls]="'accordion-body-'+simplifiedId">              
+              <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </h2>
+
+      <div [id]="'accordion-body-'+simplifiedId" class="hidden" [attr.aria-labelledby]="'accordion-heading-'+simplifiedId">
+        <div class="p-2 border border-gray-200 dark:border-gray-700 dark:bg-gray-900">
+            <ul class="grid w-full gap-2">
+              @for(child of data.children; track child.id) {
+                <li>
+                  <bae-category-item [data]="child"></bae-category-item>
+                </li>
+              }
+            </ul>
+        </div>
+      </div>
+
+    }
+  }
+}
+
+
